language_tests/source_files/invalid/move_out_of_borrow_assign.tr
// Test: Move Out Of Borrow (Assignment)
// Verifies that moving a non-Copy value out of a reference via assignment is forbidden.

struct Container {
    data: int32
}

func main() {
    var c = Container { data: 42 }
    var borrow = &c
    
    // ERROR: cannot move out of borrowed content
    var moved = *borrow 
}
